aws/ansible/main.tf
###################################
## Virtual Machine Module - Main ##
###################################

# # Create Elastic IP for the EC2 instance
# resource "aws_eip" "linux-eip" {
#   vpc  = true
#   tags = {
#     Name        = "${lower(var.app_name)}-eip"
#     Environment = var.app_environment
#   }
# }

# Create EC2 Instance
resource "aws_instance" "awx-server" {
  ami                         = "ami-06334a6e92bb3f864"
  instance_type               = var.linux_instance_type
  subnet_id                   = var.public_subnet_id
  vpc_security_group_ids      = [aws_security_group.aws-linux-sg.id]
  associate_public_ip_address = var.linux_associate_public_ip_address
  source_dest_check           = false
  key_name                    = "postgres_id_rsa"
  
  # root disk
  root_block_device {
    volume_size           = var.linux_root_volume_size
    volume_type           = var.linux_root_volume_type
    delete_on_termination = true
    encrypted             = true
  }

  # extra disk
  ebs_block_device {
    device_name           = "/dev/xvda"
    volume_size           = var.linux_data_volume_size
    volume_type           = var.linux_data_volume_type
    encrypted             = true
    delete_on_termination = true
  }
  connection {
    type     = "ssh"
    user     = "ubuntu"
    private_key = file("postgres_id_rsa")
    host = "${self.public_ip}"
  }


  tags = {
    Name        = "${lower(var.app_name)}"
    Environment = var.app_environment
  }
}

# Create Elastic IP for the EC2 instance
resource "aws_eip" "linux-eip" {
  instance = aws_instance.awx-server.id
  vpc  = true
  tags = {
    Name        = "${lower(var.app_name)}-eip"
    Environment = var.app_environment
  }
}

# # Associate Elastic IP to Linux Server
# resource "aws_eip_association" "linux-eip-association" {
#   instance_id   = aws_instance.awx-server.id
#   allocation_id = aws_eip.linux-eip.id
# }

# Define the security group for the Linux server
resource "aws_security_group" "aws-linux-sg" {
  name        = "${lower(var.app_name)}-${var.app_environment}-linux-sg"
  description = "Allow incoming HTTP connections"
  vpc_id      = var.aws_vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming HTTP connections"
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming HTTPS connections"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming SSH connections"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${lower(var.app_name)}"
    Environment = var.app_environment
  }
}
